--- a/config.yaml
+++ b/config.yaml
@@ -2,4 +2,4 @@ sample-models:
     in: '/home/moses/moses-models/sample-models/phrase-model/in'
     out: '/home/moses/moses-models/sample-models/out'
     homeDir: '/home/moses/moses-models/sample-models'
-    command: '/home/moses/mosesdecoder/bin/moses -f phrase-model/moses.ini < phrase-model/in > out'
+    command: '/home/longnhit/workspace/mosesdecoder/bin/moses -f /home/longnhit/workspace/translation-es-en/train-result/model/moses.ini < phrase-model/in > out'
