--- a/config.yaml
+++ b/config.yaml
@@ -2,4 +2,4 @@ sample-models:
     in: '/home/longnhit/testing_folder/sample-models/phrase-model/in'
     out: '/home/longnhit/testing_folder/sample-models/out'
     homeDir: '/home/longnhit/testing_folder/sample-models'
-    command: '/home/longnhit/workspace/mosesdecoder/bin/moses -f /home/longnhit/workspace/translation-es-en/train-result/model/moses.ini < phrase-model/in > out'
+    command: '/home/longnhit/workspace/mosesdecoder/bin/moses -f /home/longnhit/workspace/translation-es-en/train-result/model/moses.ini < /home/longnhit/testing_folder/sample-models/phrase-model/in > /home/longnhit/testing_folder/sample-models/out'
